deleted a few files

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "express-fileupload": "^1.2.1",
     "express.js": "^1.0.0",
+    "firebase": "^9.4.0",
+    "firebaseui": "^6.0.0",
     "nodemon": "^2.0.14"
   }
 }
